# merkle-distributor

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  .yarnrc.yml  Anchor.toml  Captain.toml  Cargo.toml  LICENSE.txt  README.md  ci.nix  flake.nix  package.json  png_README.md  png_merkle_distributor.md  shell.nix  tsconfig.build.json  tsconfig.cjs.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: nix.yml  programs.yml  release.yml  rust.yml
.yarn/sdks/typescript/lib/: tsserver.js  tsserverlibrary.js
data/: airdrop-amounts.json
programs/merkle-distributor/: Cargo.toml  README.md  README.tpl
programs/merkle-distributor/src/: lib.rs  merkle_proof.rs
programs/program-bitmap/: Cargo.toml
programs/program-bitmap/src/: lib.rs
scripts/: create-distributor.ts  generate-distributor-info.ts  generate-idl-types.sh
src/: constants.ts  index.ts  pda.ts  sdk.ts  types.ts  wrapper.ts
src/utils/: balance-tree.ts  bytes32.ts  index.ts  merkle-tree.ts  parse-balance-map.ts
tests/: big-tree.spec.ts  merkle-distributor.spec.ts  parse-balance-map.spec.ts  png-merkle-distributor.ts  test-key.json  testutils.ts
