[package]
name = "merkle-distributor"
version = "0.2.5"
description = "A Solana program for distributing tokens according to a Merkle root."
edition = "2021"
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/merkle-distributor"
authors = [
    "Michael Huang <michaelhly@gmail.com>",
    "Ian Macalinao <ian@ship.capital>"
]
license = "GPL-3.0"
keywords = ["solana", "airdrop", "token", "saber"]

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_distributor"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.17.0"
anchor-spl = ">=0.17.0"
vipers = "1.5.5"
